Use java 15 records